tests/snapshots/run_wpt_conformance__coreml_argMin_float32_4D_tensor__axis_0__default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "arg_min_max.https.any.js",
    "argMin float32 4D tensor, axis=0, default options",
    "coreml",
    "PASS",
)
